--- a/style.css
+++ b/style.css
@@ -165,8 +165,7 @@ body{
 .superhero-details{
   margin: 10px 3rem;
   display: flex;
-  
-  justify-content: space-between;
+
   gap: 1rem;
   background-color: rgba(0, 0, 0, 0.26);
   padding: 10px;
@@ -204,13 +203,12 @@ body{
 }
 
 .show-info{
-  
   flex-direction: column;
-  
   align-items: flex-start;
   gap: 0.5rem;
-  
-  background-color: var(--primarycolor);
+  background-color: rgba(111, 18, 224, 0.05);
+  padding: 16px;
+  border-radius: 5px;
 }
 
 .show-info h2, i, h4, h4 a{
@@ -220,6 +218,7 @@ body{
 
 .show-info h4 {
   padding: 0 20px;
+  font-size: 0.9rem;
 }
 
 
