--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body{
   margin-right: 15px;
 }
 
+.search-bar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .superhero-search{
   background-color: transparent;
   border: 2.5px solid wheat;
@@ -64,8 +70,12 @@ body{
   
 }
 
+#svg{
+  fill: wheat;
+}
 
-.superhero-main{
+
+.superhero-main, .superhero-favorites{
   height: auto;
   display: flex;
   flex-flow: row wrap;
@@ -120,6 +130,10 @@ body{
   padding: 8px 8px;
   text-transform: uppercase;
   font-size: 1.25rem;
+}
+
+.fa-heart{
+  font-size: 1.5rem;
 }
 
 
