--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/*Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
 *{
@@ -18,6 +18,9 @@
   opacity: 0.7;
   
 }
+
+/******************* HOMEPAGE STYLES ************************/
+
 body{
   background-color: var(--primarycolor);
 }
@@ -94,15 +97,11 @@ body{
   clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 10%, 85% 0);
   transition: all 0.2s ease-in-out;
   cursor: pointer;
-  
-  
 }
 
 .superhero-character:hover{
   transform: translateY(-2%);
 }
-
-
 
 .superhero-img{
   width: 290px;
@@ -140,7 +139,7 @@ body{
 
 
 
-/*Super hero details page */
+/*************** Supehero Details Page Styles ********************/
 
 .superhero-details{
   margin: 10px 3rem;
@@ -231,6 +230,7 @@ body{
   margin: 20px 0;
 }
 
+/****************** MEDIA Queries for Responsiveness on smaller devices ******************/
 
 
 @media only screen and (max-width:900px){
